--- a/echoo/backend/package.json
+++ b/echoo/backend/package.json
@@ -17,15 +17,19 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-esm",
+    "type": "module"
   },
   "dependencies": {
     "@nestjs/config": "^4.0.2",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "cross-env": "^7.0.3",
+    "passport": "^0.7.0",
     "pg": "^8.15.1",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.22"
@@ -46,6 +50,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
